# Timer

./: .gitignore  Cargo.toml  README.md  build.rs  default.toml  settings.toml
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  utils.rs
src/app/: message.rs  mod.rs  settings.rs  state.rs
src/economy/: finviz.rs  mod.rs
src/utils/: assets.rs  log.rs  mod.rs  settings.rs  settings_window.rs
src/widget/: mainwindow.rs  mod.rs  widget.rs
src/widget/window/: main.rs  mainwindow.rs  mod.rs  settings.rs
src/widgets/: content.rs  mod.rs
src/widgets/windows/: settings.rs
