[package]
name = "Timer"
version = "0.1.0"
edition = "2024"

[lib]
name = "timer"

[dependencies]
eframe = "0.33.3"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = "0.12.24"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "time", "local-time"] }
egui_inbox = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing-appender = "0.2.4"
