[package]
name = "Timer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "timer"

[dependencies]
eframe = "0.33.3"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = "0.12.24"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "time", "local-time"] }
egui_inbox = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4", features = ["std"] }
image = "0.25.9"

[build-dependencies]
embed-resource = "3.0.6"
